--- a/AirdPro/Forms/ConversionForm.resx
+++ b/AirdPro/Forms/ConversionForm.resx
@@ -139,10 +139,10 @@
     <value>NoControl</value>
   </data>
   <data name="label9.Location" type="System.Drawing.Point, System.Drawing">
-    <value>178, 58</value>
+    <value>171, 58</value>
   </data>
   <data name="label9.Size" type="System.Drawing.Size, System.Drawing">
-    <value>40, 16</value>
+    <value>53, 20</value>
   </data>
   <data name="label9.TabIndex" type="System.Int32, mscorlib">
     <value>40</value>
@@ -366,7 +366,7 @@
     <value>NoControl</value>
   </data>
   <data name="btnPX.Location" type="System.Drawing.Point, System.Drawing">
-    <value>890, 8</value>
+    <value>1099, 9</value>
   </data>
   <data name="btnPX.Size" type="System.Drawing.Size, System.Drawing">
     <value>94, 30</value>
@@ -552,7 +552,7 @@
     <value>NoControl</value>
   </data>
   <data name="btnMetaboLights.Location" type="System.Drawing.Point, System.Drawing">
-    <value>858, 43</value>
+    <value>1099, 43</value>
   </data>
   <data name="btnMetaboLights.Size" type="System.Drawing.Size, System.Drawing">
     <value>130, 30</value>
@@ -591,16 +591,16 @@
     <value>NoControl</value>
   </data>
   <data name="label4.Location" type="System.Drawing.Point, System.Drawing">
-    <value>994, 61</value>
+    <value>1390, 62</value>
   </data>
   <data name="label4.Size" type="System.Drawing.Size, System.Drawing">
-    <value>56, 16</value>
+    <value>44, 20</value>
   </data>
   <data name="label4.TabIndex" type="System.Int32, mscorlib">
     <value>36</value>
   </data>
   <data name="label4.Text" xml:space="preserve">
-    <value>MainView</value>
+    <value>Main</value>
   </data>
   <data name="label4.TextAlign" type="System.Drawing.ContentAlignment, System.Drawing">
     <value>MiddleCenter</value>
@@ -674,7 +674,7 @@
     <value>NoControl</value>
   </data>
   <data name="btnMainView.Location" type="System.Drawing.Point, System.Drawing">
-    <value>1000, 8</value>
+    <value>1384, 9</value>
   </data>
   <data name="btnMainView.Size" type="System.Drawing.Size, System.Drawing">
     <value>50, 50</value>
@@ -713,10 +713,10 @@
     <value>NoControl</value>
   </data>
   <data name="label12.Location" type="System.Drawing.Point, System.Drawing">
-    <value>1178, 59</value>
+    <value>1558, 59</value>
   </data>
   <data name="label12.Size" type="System.Drawing.Size, System.Drawing">
-    <value>30, 16</value>
+    <value>41, 20</value>
   </data>
   <data name="label12.TabIndex" type="System.Int32, mscorlib">
     <value>34</value>
@@ -833,7 +833,7 @@
     <value>NoControl</value>
   </data>
   <data name="btnHelp.Location" type="System.Drawing.Point, System.Drawing">
-    <value>1168, 8</value>
+    <value>1552, 10</value>
   </data>
   <data name="btnHelp.Size" type="System.Drawing.Size, System.Drawing">
     <value>50, 50</value>
@@ -872,10 +872,10 @@
     <value>NoControl</value>
   </data>
   <data name="label112.Location" type="System.Drawing.Point, System.Drawing">
-    <value>1121, 59</value>
+    <value>1500, 59</value>
   </data>
   <data name="label112.Size" type="System.Drawing.Size, System.Drawing">
-    <value>34, 16</value>
+    <value>45, 20</value>
   </data>
   <data name="label112.TabIndex" type="System.Int32, mscorlib">
     <value>32</value>
@@ -973,7 +973,7 @@
     <value>NoControl</value>
   </data>
   <data name="btnRedisSetting.Location" type="System.Drawing.Point, System.Drawing">
-    <value>1112, 8</value>
+    <value>1497, 10</value>
   </data>
   <data name="btnRedisSetting.Size" type="System.Drawing.Size, System.Drawing">
     <value>50, 50</value>
@@ -1012,10 +1012,10 @@
     <value>NoControl</value>
   </data>
   <data name="label11.Location" type="System.Drawing.Point, System.Drawing">
-    <value>1060, 58</value>
+    <value>1440, 59</value>
   </data>
   <data name="label11.Size" type="System.Drawing.Size, System.Drawing">
-    <value>42, 16</value>
+    <value>57, 20</value>
   </data>
   <data name="label11.TabIndex" type="System.Int32, mscorlib">
     <value>30</value>
@@ -1048,10 +1048,10 @@
     <value>NoControl</value>
   </data>
   <data name="label8.Location" type="System.Drawing.Point, System.Drawing">
-    <value>123, 59</value>
+    <value>118, 59</value>
   </data>
   <data name="label8.Size" type="System.Drawing.Size, System.Drawing">
-    <value>35, 16</value>
+    <value>47, 20</value>
   </data>
   <data name="label8.TabIndex" type="System.Int32, mscorlib">
     <value>29</value>
@@ -1084,10 +1084,10 @@
     <value>NoControl</value>
   </data>
   <data name="label7.Location" type="System.Drawing.Point, System.Drawing">
-    <value>71, 59</value>
+    <value>67, 59</value>
   </data>
   <data name="label7.Size" type="System.Drawing.Size, System.Drawing">
-    <value>31, 16</value>
+    <value>40, 20</value>
   </data>
   <data name="label7.TabIndex" type="System.Int32, mscorlib">
     <value>28</value>
@@ -1120,10 +1120,10 @@
     <value>NoControl</value>
   </data>
   <data name="label6.Location" type="System.Drawing.Point, System.Drawing">
-    <value>13, 59</value>
+    <value>7, 58</value>
   </data>
   <data name="label6.Size" type="System.Drawing.Size, System.Drawing">
-    <value>39, 16</value>
+    <value>54, 20</value>
   </data>
   <data name="label6.TabIndex" type="System.Int32, mscorlib">
     <value>27</value>
@@ -1146,7 +1146,7 @@
   <data name="&gt;&gt;label6.ZOrder" xml:space="preserve">
     <value>13</value>
   </data>
-  <data name="lvFileListlvFileList.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
+  <data name="lvFileList.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
     <value>Top, Bottom, Left, Right</value>
   </data>
   <data name="headerJobId.Text" xml:space="preserve">
@@ -1222,19 +1222,19 @@
     <value>403, 18</value>
   </metadata>
   <data name="rerun.Size" type="System.Drawing.Size, System.Drawing">
-    <value>123, 22</value>
+    <value>149, 30</value>
   </data>
   <data name="rerun.Text" xml:space="preserve">
     <value>Rerun</value>
   </data>
   <data name="removeToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>123, 22</value>
+    <value>149, 30</value>
   </data>
   <data name="removeToolStripMenuItem.Text" xml:space="preserve">
     <value>Remove</value>
   </data>
   <data name="contentMenu.Size" type="System.Drawing.Size, System.Drawing">
-    <value>124, 48</value>
+    <value>150, 64</value>
   </data>
   <data name="&gt;&gt;contentMenu.Name" xml:space="preserve">
     <value>contentMenu</value>
@@ -1242,28 +1242,28 @@
   <data name="&gt;&gt;contentMenu.Type" xml:space="preserve">
     <value>System.Windows.Forms.ContextMenuStrip, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
-  <data name="lvFileListlvFileList.Font" type="System.Drawing.Font, System.Drawing">
+  <data name="lvFileList.Font" type="System.Drawing.Font, System.Drawing">
     <value>微软雅黑, 8pt</value>
   </data>
-  <data name="lvFileListlvFileList.Location" type="System.Drawing.Point, System.Drawing">
-    <value>3, 79</value>
+  <data name="lvFileList.Location" type="System.Drawing.Point, System.Drawing">
+    <value>3, 82</value>
   </data>
-  <data name="lvFileListlvFileList.Size" type="System.Drawing.Size, System.Drawing">
-    <value>1221, 397</value>
+  <data name="lvFileList.Size" type="System.Drawing.Size, System.Drawing">
+    <value>1605, 394</value>
   </data>
-  <data name="lvFileListlvFileList.TabIndex" type="System.Int32, mscorlib">
+  <data name="lvFileList.TabIndex" type="System.Int32, mscorlib">
     <value>7</value>
   </data>
-  <data name="&gt;&gt;lvFileListlvFileList.Name" xml:space="preserve">
-    <value>lvFileListlvFileList</value>
+  <data name="&gt;&gt;lvFileList.Name" xml:space="preserve">
+    <value>lvFileList</value>
   </data>
-  <data name="&gt;&gt;lvFileListlvFileList.Type" xml:space="preserve">
+  <data name="&gt;&gt;lvFileList.Type" xml:space="preserve">
     <value>System.Windows.Forms.ListView, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
-  <data name="&gt;&gt;lvFileListlvFileList.Parent" xml:space="preserve">
+  <data name="&gt;&gt;lvFileList.Parent" xml:space="preserve">
     <value>container.Panel1</value>
   </data>
-  <data name="&gt;&gt;lvFileListlvFileList.ZOrder" xml:space="preserve">
+  <data name="&gt;&gt;lvFileList.ZOrder" xml:space="preserve">
     <value>14</value>
   </data>
   <data name="btnImport.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
@@ -1377,10 +1377,10 @@
     <value>NoControl</value>
   </data>
   <data name="cbAutoExe.Location" type="System.Drawing.Point, System.Drawing">
-    <value>1239, 12</value>
+    <value>833, 17</value>
   </data>
   <data name="cbAutoExe.Size" type="System.Drawing.Size, System.Drawing">
-    <value>96, 16</value>
+    <value>142, 22</value>
   </data>
   <data name="cbAutoExe.TabIndex" type="System.Int32, mscorlib">
     <value>26</value>
@@ -1520,7 +1520,7 @@
     <value>172, 59</value>
   </data>
   <data name="label5.Size" type="System.Drawing.Size, System.Drawing">
-    <value>0, 16</value>
+    <value>0, 20</value>
   </data>
   <data name="label5.TabIndex" type="System.Int32, mscorlib">
     <value>21</value>
@@ -1626,7 +1626,7 @@
     <value>123, 59</value>
   </data>
   <data name="label3.Size" type="System.Drawing.Size, System.Drawing">
-    <value>0, 16</value>
+    <value>0, 20</value>
   </data>
   <data name="label3.TabIndex" type="System.Int32, mscorlib">
     <value>19</value>
@@ -1765,7 +1765,7 @@
     <value>NoControl</value>
   </data>
   <data name="btnSetting.Location" type="System.Drawing.Point, System.Drawing">
-    <value>1056, 8</value>
+    <value>1440, 9</value>
   </data>
   <data name="btnSetting.Size" type="System.Drawing.Size, System.Drawing">
     <value>50, 50</value>
@@ -1804,7 +1804,7 @@
     <value>73, 59</value>
   </data>
   <data name="label2.Size" type="System.Drawing.Size, System.Drawing">
-    <value>0, 16</value>
+    <value>0, 20</value>
   </data>
   <data name="label2.TabIndex" type="System.Int32, mscorlib">
     <value>18</value>
@@ -1834,7 +1834,7 @@
     <value>13, 59</value>
   </data>
   <data name="label1.Size" type="System.Drawing.Size, System.Drawing">
-    <value>0, 16</value>
+    <value>0, 20</value>
   </data>
   <data name="label1.TabIndex" type="System.Int32, mscorlib">
     <value>17</value>
@@ -1885,7 +1885,7 @@
     <value>Vertical</value>
   </data>
   <data name="tbJobInfo.Size" type="System.Drawing.Size, System.Drawing">
-    <value>556, 306</value>
+    <value>730, 306</value>
   </data>
   <data name="tbJobInfo.TabIndex" type="System.Int32, mscorlib">
     <value>8</value>
@@ -1927,7 +1927,7 @@
     <value>Vertical</value>
   </data>
   <data name="tbConsole.Size" type="System.Drawing.Size, System.Drawing">
-    <value>652, 309</value>
+    <value>862, 309</value>
   </data>
   <data name="tbConsole.TabIndex" type="System.Int32, mscorlib">
     <value>7</value>
@@ -1957,10 +1957,10 @@
     <value>1</value>
   </data>
   <data name="splitContainer1.Size" type="System.Drawing.Size, System.Drawing">
-    <value>1217, 312</value>
+    <value>1601, 312</value>
   </data>
   <data name="splitContainer1.SplitterDistance" type="System.Int32, mscorlib">
-    <value>555</value>
+    <value>729</value>
   </data>
   <data name="splitContainer1.TabIndex" type="System.Int32, mscorlib">
     <value>9</value>
@@ -1993,7 +1993,7 @@
     <value>1</value>
   </data>
   <data name="container.Size" type="System.Drawing.Size, System.Drawing">
-    <value>1227, 802</value>
+    <value>1611, 802</value>
   </data>
   <data name="container.SplitterDistance" type="System.Int32, mscorlib">
     <value>480</value>
@@ -2032,7 +2032,7 @@
     <value>66</value>
   </metadata>
   <data name="$this.ClientSize" type="System.Drawing.Size, System.Drawing">
-    <value>1227, 802</value>
+    <value>1611, 802</value>
   </data>
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
